# ifk-lantmateriet

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: github-action-build.yaml  github-action-docs.yaml  github-action-lint.yaml  github-action-md-lint.yaml  github-action-pypi.yaml  github-action-test.yaml  github-action-type.yaml
data/raw/scb/: Kommun_Sweref99TM.geojson  Lan_Sweref99TM_region.geojson  README.md
docs/: api.md  cli.md  index.md
scripts/: choropleth.py  extract_geojson.py
src/lantmateriet/: admin_border_types.py  admin_borders.py  api.py  building.py  choropleth.py  cli.py  communication.py  config.py  construction.py  download_api.py  extract.py  geometry.py  ground.py  height.py  line.py  point.py  polygon.py  utils.py
tests/: test_unit.py
tests/fixtures/: test_integration_building_byggnad.geojson  test_integration_building_byggnad_result.geojson  test_integration_communication_vaglinje.geojson  test_integration_communication_vaglinje_result.geojson  test_integration_ground_mark.geojson  test_integration_ground_mark_result.geojson
tests/integration/: test_integration_admin_boder.py  test_integration_building.py  test_integration_communication.py  test_integration_construction.py  test_integration_download_api.py  test_integration_ground.py  test_integration_line.py  test_integration_point.py  test_integration_polygon.py
tests/unit/: test_unit_building.py  test_unit_communication.py  test_unit_construction.py  test_unit_geometry.py  test_unit_ground.py  test_unit_line.py  test_unit_point.py  test_unit_polygon.py
