[project]
name = "ifk-lantmateriet"
version = "0.1.0"
description = "Parse data from Lantmäteriet."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mladen Gibanica", email = "11275336+mgcth@users.noreply.github.com" },
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "geopandas ~= 0.14",
    "pyogrio ~= 0.7",
    "pyarrow ~= 16.0",
    "unidecode ~= 1.3",
    "tqdm ~= 4.66",
    "typer ~= 0.12",
    "ray ~= 2.20",
    "pystac-client == 0.8.6",
    "python-dotenv == 1.0.1"
]

[dependency-groups]
lint = [
    "ruff >= 0.11",
]
type = ["mypy >= 1.15", "types-requests ~= 2.28", "pandas-stubs ~= 1.5"]
test = ["pytest >= 8.3", "coverage >= 7.7", "pytest-cov ~= 6.0"]
doc = [
    "mkdocs == 1.4.3",
    "mkdocs-material == 8.5.11",
    "mkdocstrings[python] == 0.19.1",
]
dev = [
    {include-group = "lint"},
    {include-group = "type"},
    {include-group = "test"},
    {include-group = "doc"},
    "pre-commit >= 4.2",
    "ipykernel >= 6.29",
    "matplotlib >= 3.8",
]

[project.scripts]
ifk-lantmateriet = "lantmateriet.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["D203", "D213", "S101"]
unfixable = ["B", "S"]
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"